--- a/main/index.html
+++ b/main/index.html
@@ -133,7 +133,7 @@
           <!-- <button id="twot0" href="" class="delete-twot font-bold bg-red-600  text-white rounded-full mt-6 px-6  flex items-center hover:bg-red-900">
             Delete
           </button> -->
-          <h2 class="text-right mr-2 pb-3 text-gray-500">
+          <h2 class="time text-right mr-2 pb-3 text-gray-500">
             00.00
           </h2>
         </div>
