--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		<link href="index.html">
     <link rel="stylesheet" href="style-login.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
-  </head>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+		<link rel="shortcut icon" href="./main/assets/logo.png">
+	</head>
   <body>
-	
+
 	<div class="container" id="container">
 		
 		<div class="form-container sign-in-container">
@@ -16,7 +18,7 @@
 			<form action="" id="loginprocess">
 				<h1>Register and Have fun!!! </h1>
 				
-				<input id="display-name-input" type="text" placeholder="Username" required minlength="4" maxlength="15"/>
+				<input id="display-name-input" class="user-name" type="text" placeholder="Username" required minlength="4" maxlength="15"/>
 				<button id="signIn">Lets Goooww!</button>
 			</form>
 		</div>
@@ -25,15 +27,11 @@
 				<div class="overlay-panel overlay-right">
 					<h1>twotter.netlify.app</h1>
 					<p>A place where you can WOT! as much as you want!!</p>
-					
 				</div>
 			</div>
 		</div>
 	</div>
 	
-	<footer>
-		
-	</footer>
-	<script src="login-page.js"></script>
+	 <script src="login-page.js"></script>
   </body>
 </html>
