--- a/main/index.html
+++ b/main/index.html
@@ -8,6 +8,9 @@
   <title>TWOther</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./dist.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./assets/logo.png">
+  
  
 </head>
 
@@ -27,11 +30,12 @@
 
       <!-- NAVIGATION  -->
       <nav class="mt-5">
-        <a href="" class="link-active mb-8 text-red-600">
-          <i class="fa-solid fa-house text-xl "></i>
+        <a href="" class="flex  justify-center items-center xl:justify-start  text-red-600 mb-8">
+          <i class="fa-solid fa-house text-xl"></i>
           <span class="icon">Home</span>
         </a>
-        <a href="" class="link mb-8 text-red-600">
+
+        <a href="" class="mb-8 flex items-center justify-center  xl:justify-start dark:text-white hover:text-red-600 dark:hover:text-red-600  transition duration-300 ease-in-out">
           <i class="fa-solid fa-hashtag text-xl"></i>
           <span class="icon">Explore</span>
         </a>
@@ -97,7 +101,7 @@
           </div>
           
        
-          <button id="submit-twot" href="" class="bg-red-600 text-white text-xs text-center rounded-full px-2 ml-auto mr-1 flex items-center font-bold  hover:bg-red-900 sm:px-6 sm:text-lg">
+          <button id="submit-twot"  href="" class="twot-button bg-red-600 text-white text-xs text-center rounded-full px-2 ml-auto mr-1 flex items-center font-bold  hover:bg-red-900 sm:px-6 sm:text-lg">
             WOT
           </button>
 
@@ -231,8 +235,8 @@
           </h4>
           <p class="text-xs text-gray-400">1k WOTs</p>
         </div>
-        <div class="text-blue-400  p-3 cursor-pointer">
-          liat keluh kesah
+        <div class="text-red-600 font-bold  p-3 cursor-pointer">
+          Lainya
         </div>
       </div>
     <!-- TWEET HARIAN END -->
